--- a/style.css
+++ b/style.css
@@ -22,10 +22,14 @@ body {
 }
 /* Header */
 header {
+  position: sticky;
   width: 100%;
   display: flex;
+  padding: 2rem 7%;
   justify-content: space-between;
   align-items: center;
+  background: var(--white-color);
+  box-shadow: 0 0 1.2rem rgba(0, 0, 0, 0.7);
 }
 .logo img {
   width: 20rem;
@@ -34,15 +38,115 @@ header {
  
 } */
 .navbar a {
+  position: relative;
   margin-left: 2rem;
   font-size: 2rem;
   color: var(--text-color);
 }
+.navbar a::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 4px;
+  background: blue;
+  border-radius: 20px;
+  left: 0;
+  bottom: -5px;
+  transform: scaleX(0);
+  transition: transform 0.5s ease-in-out;
+  transform-origin: right;
+}
+.navbar a:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
+}
 .header_icon {
   display: flex;
+  justify-content: center;
   align-items: center;
   gap: 2.6rem;
 }
 .header_icon .cart_icon {
   cursor: pointer;
+  position: relative;
+}
+.header_icon .cart_icon span {
+  position: absolute;
+  bottom: 0;
+  right: -3px;
+  padding: 10px;
+  width: 17px;
+  height: 17px;
+  background: var(--main-color);
+  color: var(--white-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+header button {
+  padding: 20px 40px;
+  background: transparent;
+  color: var(--main-color);
+  border: 1.5px solid var(--main-color);
+  font-size: 2rem;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: 0.5s ease-in-out;
+}
+header button:hover {
+  background: var(--main-color);
+  color: var(--white-color);
+}
+/* Home Section */
+section {
+  width: 100%;
+  padding: 12rem 7% 3rem;
+}
+span {
+  color: var(--main-color);
+}
+.home {
+  width: 100%;
+  background: url(./image/bg1.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.home_content {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.home_text_content {
+  width: 50%;
+  gap: 4rem;
+  padding-top: 5rem;
+}
+.home_text_content h1 {
+  font-size: 8rem;
+  line-height: 1;
+}
+.home_text_content p {
+  font-size: 2rem;
+  margin: 5rem 0;
+}
+button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  padding: 20px 50px;
+  background: var(--main-color);
+  font-size: 19px;
+  border-radius: 50px;
+  color: var(--white-color);
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+  border: 1.5px solid var(--main-color);
+}
+
+button:hover {
+  background: transparent;
+  color: var(--main-color);
 }
