--- a/style.css
+++ b/style.css
@@ -192,3 +192,57 @@ button:hover {
 .about-text p {
   font-size: 2rem;
 }
+.about-text p {
+  font-size: 2rem;
+  margin: 4rem 0;
+}
+/* Menu Section */
+.menu {
+  width: 100%;
+  background: url(./image/bg1.jpg);
+}
+.heading-text {
+  text-align: center;
+}
+.heading-text .heading {
+  text-align: center;
+  justify-content: center;
+}
+.heading div {
+  width: 70px;
+  height: 4px;
+  border-radius: 50px;
+  background: var(--main-color);
+}
+.heading-text p {
+  font-size: 1.5rem;
+}
+.menu-content {
+  width: 100%;
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: repeat(3, 2fr);
+  gap: 2rem;
+  margin-top: 7rem;
+}
+.menu-content .product-box {
+  border: 1.5px solid gray;
+  padding: 1rem;
+  border-radius: 9px;
+  overflow: hidden;
+  position: relative;
+}
+.menu-content .product-box .product-img {
+  width: 100%;
+  height: 300px;
+  border-radius: 9px;
+  overflow: hidden;
+}
+.menu-content .product-box .product-img img {
+  width: 100%;
+  height: 100%;
+  transition: 0.5s ease-in-out;
+}
+.menu-content .product-box .product-img:hover {
+  transform: scale(1.2);
+}
