--- a/style.css
+++ b/style.css
@@ -327,3 +327,48 @@ button:hover {
 .menu-page p {
   font-size: 22px;
 }
+.gallary {
+  width: 100%;
+  background: url(./image/bg2.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.gallary-content {
+  margin-top: 6rem;
+  display: flex;
+}
+.gallary-box {
+  width: 100%;
+  height: 300px;
+  position: relative;
+  border-radius: 8px;
+  overflow: hidden;
+}
+.gallary-box .gallary-img {
+  width: 100%;
+  height: 100%;
+  transition: 0.5s ease-in-out;
+}
+.gallary-box:hover .gallary-img {
+  transform: scale(1.3);
+}
+.gallary-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 2rem;
+  text-align: center;
+  gap: 3rem;
+  background: #39323293;
+  opacity: 0;
+  transition: 0.5s ease-in-out;
+}
+.gallary-box:hover .gallary-overlay {
+  opacity: 1;
+}
