--- a/style.css
+++ b/style.css
@@ -453,3 +453,72 @@ textarea {
 .order-text form button {
   border-radius: 20px;
 }
+/* Testimonial */
+.testimonial {
+  width: 100%;
+  background: url(./image/bg1.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.slider-container {
+  margin-top: 4rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.slider-wrapper {
+  width: 90%;
+  box-shadow: 0 0 1rem gray;
+  border-radius: 20px;
+  margin: 40px 70px;
+  overflow: hidden;
+}
+.slider-list .slider-card {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2.4rem;
+  text-align: center;
+  padding: 2rem;
+}
+.slider-list .slider-card img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 2px solid transparent;
+  outline: 3px solid var(--main-color);
+}
+.slider-list .slider-card h2 {
+  font-size: 3rem;
+  color: var(--main-color);
+}
+.slider-list .slider-card p {
+  font-size: 1.8rem;
+}
+.slider-list .slider-card .social-media {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.3rem;
+}
+.slider-list .slider-card .social-media a {
+  width: 6rem;
+  height: 6rem;
+  padding: 1rem;
+  background: transparent;
+  border: 1.5px solid var(--main-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-size: 2.4rem;
+  color: var(--main-color);
+  transition: 0.5s;
+}
+.slider-list .slider-card .social-media a:hover {
+  background: var(--main-color);
+  color: var(--white-color);
+}
